syntax = "proto3";
option java_package = "com.deloitte.service.grpc";

// The greeting service definition.
 service Greeter {
     // Sends a greeting
     rpc SayHello (HelloRequest) returns (HelloReply) {}
     // Sends another greeting
     rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
     // Sends greeting with time stamp
     rpc SayHelloDateTime (HelloRequest) returns (HelloReply) {}
    
 }

 // The request message containing the user's name.
 message HelloRequest {
     string name = 1;
 }

 // The response message containing the greetings
 message HelloReply {
     string message = 1;
 }